--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -86,9 +86,9 @@ modules-search: [ local ]
 #
 # YAML: list of maps of string:string key-value pairs.
 #instances:
-#- id:       owncloud
-#  module:   webview
-#  config:   owncloud.conf
+- id:       browsers
+  module:   netinstall
+  config:   netinstall-browsers.conf
 
 # Sequence section. This section describes the sequence of modules, both
 # viewmodules and jobmodules, as they should appear and/or run.
@@ -118,6 +118,7 @@ sequence:
 #  - notesqml
   - locale
   - keyboard
+  - netinstall@browsers
   - partition
   - users
 #  - tracking
