Corrected errors in configs

--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -85,7 +85,7 @@ modules-search: [ local ]
 # during install.
 #
 # YAML: list of maps of string:string key-value pairs.
-#instances:
+instances:
 - id:       browsers
   module:   netinstall
   config:   netinstall-browsers.conf
