starting to change to new config

--- a/etc/calamares/modules/packages.conf
+++ b/etc/calamares/modules/packages.conf
@@ -203,7 +203,6 @@ operations:
     - plasma-framework
     - qt5-xmlpatterns
     - squashfs-tools
-    - extra-cmake-modules
-    - mkinitcpio-openswap
+    - mkinitcpio-archiso
     - calamares
     - myarch-calamares-config
