--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -10,12 +10,14 @@ instances:
 
 sequence:
 - show:
-  - welcome
+  - welcomeq
+  - notesqml
+  - netinstall@browsers
   - locale
-  - keyboard
+  - keyboardq
   - partition
-  - users
-  - summary
+  - usersq
+  - summaryq
 - exec:
   - partition
   - mount
@@ -23,20 +25,31 @@ sequence:
   - machineid
   - fstab
   - locale
-  - keyboard
+  - keyboardq
   - localecfg
+# - luksbootkeyfile
+# - luksopenswaphookcfg
+# - dracutlukscfg
+# - plymouthcfg
+# - shellprocess@carlibefore
   - initcpiocfg
   - initcpio
-  - users
+# - removeuser
+  - usersq
   - displaymanager
   - networkcfg
   - hwclock
   - services-systemd
   - packages
+# - dracut
+# - initramfs
+# - grubcfg
   - bootloader
+# - shellprocess@carliafter
+# - preservefiles
   - umount
 - show:
-  - finished
+  - finishedq
 
 branding: default
 
