modules corrected/added

--- a/etc/calamares/modules/shellprocess-myarchafter.conf
+++ b/etc/calamares/modules/shellprocess-myarchafter.conf
@@ -31,9 +31,9 @@
 #     command differently from the global setting.
 ---
 i18n:
-     name: "Preparing your system for Carli"
+     name: "Preparing your system for myArch"
 
 dontChroot: false
 timeout: 999
 script:
-    - command: "/usr/local/bin/carli-before"
+    - command: "/usr/local/bin/myarch-final"
