--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -7,17 +7,22 @@ instances:
 - id:       browsers
   module:   netinstall
   config:   netinstall-browsers.conf
+- id:       myarchbefore
+  module:   shellprocess
+  config:   shellprocess-myarchbefore.conf
+- id:       myarchafter
+  module:   shellprocess
+  config:   shellprocess-myarchafter.conf
 
 sequence:
 - show:
-  - welcomeq
-  - notesqml
+  - welcome
   - netinstall@browsers
   - locale
-  - keyboardq
+  - keyboard
   - partition
-  - usersq
-  - summaryq
+  - users
+  - summary
 - exec:
   - partition
   - mount
@@ -25,17 +30,17 @@ sequence:
   - machineid
   - fstab
   - locale
-  - keyboardq
+  - keyboard
   - localecfg
-# - luksbootkeyfile
-# - luksopenswaphookcfg
+  - luksbootkeyfile
+  - luksopenswaphookcfg
 # - dracutlukscfg
 # - plymouthcfg
-# - shellprocess@carlibefore
+  - shellprocess@myarchbefore
   - initcpiocfg
   - initcpio
-# - removeuser
-  - usersq
+  - removeuser
+  - users
   - displaymanager
   - networkcfg
   - hwclock
@@ -43,10 +48,10 @@ sequence:
   - packages
 # - dracut
 # - initramfs
-# - grubcfg
+  - grubcfg
   - bootloader
-# - shellprocess@carliafter
-# - preservefiles
+  - shellprocess@myarchafter
+  - preservefiles
   - umount
 - show:
   - finishedq
