Tidied up  finishedq.conf, initcpio.conf, and 10 more files...

--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -1,6 +1,3 @@
-
----
-
 modules-search: [ local ]
 
 instances:
@@ -15,6 +12,7 @@ instances:
   config:   shellprocess-myarchafter.conf
 
 sequence:
+
 - show:
   - welcome
   - netinstall@browsers
@@ -23,6 +21,7 @@ sequence:
   - partition
   - users
   - summary
+
 - exec:
   - partition
   - mount
@@ -34,31 +33,28 @@ sequence:
   - localecfg
   - luksbootkeyfile
   - luksopenswaphookcfg
-# - dracutlukscfg
-# - plymouthcfg
-  - shellprocess@myarchbefore
   - initcpiocfg
   - initcpio
   - removeuser
   - users
-  - displaymanager
   - networkcfg
   - hwclock
   - services-systemd
+  - shellprocess@myarchbefore
   - packages
-# - dracut
-# - initramfs
+  - displaymanager
   - grubcfg
   - bootloader
   - shellprocess@myarchafter
   - preservefiles
   - umount
+
 - show:
   - finishedq
 
 branding: default
 
-prompt-install: false
+prompt-install: true
 
 dont-chroot: false
 
