Update calamares config

--- a/etc/calamares/settings.conf
+++ b/etc/calamares/settings.conf
@@ -1,21 +1,33 @@
 modules-search: [ local ]
 
 instances:
-- id:       browsers
+- id:       essentials
   module:   netinstall
-  config:   netinstall-browsers.conf
-- id:       myarchbefore
+  config:   netinstall-essentials.conf
+- id: rootfs
+  module:   unpackfs
+  config:   unpackfs1.conf
+  weight:   30
+- id: vmlinuz
+  module:   unpackfs
+  config:   unpackfs2.conf
+  weight:   1
+- id: choice
+  module:   packages
+  config:   packages.conf
+  weight:   30
+- id:       before
   module:   shellprocess
-  config:   shellprocess-myarchbefore.conf
-- id:       myarchafter
+  config:   shellprocess-before.conf
+- id:       final
   module:   shellprocess
-  config:   shellprocess-myarchafter.conf
-
+  config:   shellprocess-final.conf
+  
 sequence:
 
 - show:
   - welcome
-  - netinstall@browsers
+  - netinstall@essentials
   - locale
   - keyboard
   - partition
@@ -25,7 +37,8 @@ sequence:
 - exec:
   - partition
   - mount
-  - unpackfs
+  - unpackfs@rootfs
+  - unpackfs@vmlinuz
   - machineid
   - fstab
   - locale
@@ -40,19 +53,19 @@ sequence:
   - networkcfg
   - hwclock
   - services-systemd
-  - shellprocess@myarchbefore
-  - packages
+  - shellprocess@before
+  - packages@choice
   - displaymanager
   - grubcfg
   - bootloader
-  - shellprocess@myarchafter
+  - shellprocess@final
   - preservefiles
   - umount
 
 - show:
   - finishedq
 
-branding: default
+branding: myarch
 
 prompt-install: true
 
