--- a/etc/calamares/modules/netinstall-essentials.conf
+++ b/etc/calamares/modules/netinstall-essentials.conf
@@ -1,5 +1,5 @@
 groupsUrl:
-  - https://raw.githubusercontent.com/xerolinux/calamares-config/main/etc/calamares/modules/netinstall-essentials.yaml
+  - file:///etc/calamares/modules/netinstall-essentials.yaml
 
 required: true
 
